        * include/Rcpp/sugar/tools/iterator.h: help iterator that helps writing match 
        in terms of stl algorithms.
        * include/Rcpp/vector/Vector.h: class no_init that can be used to create
        an uninitialized vector. e.g. IntegerVector out = no_init(10) ;
        * include/Rcpp/sugar/functions/unique.h: sugar version of %in% using 
        unordered_set

2012-11-14  JJ Allaire <jj@rstudio.org>

        * src/Attributes.cpp: create sourceCpp context list using 
          single statement

2012-11-14  Dirk Eddelbuettel  <edd@debian.org>

	* inst/announce/ANNOUNCE-0.10.0.txt: Fix typo spotted by Martin
	Morgan in announcement mail

2012-11-14  Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/internal/wrap.h: fix for wrap( std::complex<double> )
        * include/Rcpp/module/class_Base.h: factored out from Module.h
        * R/00_classes.R: the C++Class gains the parents slot to hold information
        about parent classes of the class
        * src/Module.cpp : The CppClass constructor fills the parents slot of C++Class

2012-11-13  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION: Release 0.10.0
        * inst/NEWS: Release 0.10.0
        * inst/include/Rcpp/config.h: Release 0.10.0
        * debian/*: Similarly updated for new release to Debian

2012-11-13  Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/as.h: as<enum>
        * include/Rcpp/internal/wrap.h : wrap( enum )
        * include/Rcpp/traits/wrap_type_traits.h: trait to help wrap( enum )
        * include/Rcpp/traits/r_type_traits.h: trait to help as<enum>
        * include/Rcpp/module/macros.h: macros RCPP_EXPOSED_ENUM to help as/wrap
        of enums

2012-11-12  Dirk Eddelbuettel  <edd@debian.org>

	* inst/announce/ANNOUNCE-0.10.0.txt: Announcement draft

2012-11-12  JJ Allaire <jj@rstudio.org>

	* inst/doc/Rcpp-attributes/*: New vignette

2012-11-12  Romain Francois <romain@r-enthusiasts.com>
